--- a/OMSBA5305_DTC_Final_R_Code.Rmd
+++ b/OMSBA5305_DTC_Final_R_Code.Rmd
@@ -10,20 +10,37 @@ library(dynlm) # use the dynlm package
 library(urca) #use urca package, allows choosing drift and/or trend for ADF test
 library(ggplot2)
 library(stats)
+library(lmtest) # For Z Statistic
+library(forecast) 
+
 ```
 
 #Import data and declare time series
 ```{r}
 data<- read_excel("ch3_UnemploymentRate.xls")
 
-unrate <- ts(data$UNRATE, frequency = 12, start=c(1948,1)) #declare unrate as (monthly) time series
-unrate_forecast <- ts(data$UNRATE, frequency = 12, start=c(1948,1), end = c(2023,2)) #declare g as (monthly) time series
+#creating time series
+unrate <- ts(data$UNRATE, frequency = 12, start = 1948)
+data_length <- length(unrate)
+unrate_forecast <- ts(data$UNRATE, frequency = 12, start=c(1948,1), end = c(2023,2))
+
+```
+## Initial Data Plot 
+```{r}
+#plotting the data
+plot(data, type = 'l', main = 'Unemployment Rate')
+ggplot() + 
+  geom_line(data, mapping=aes(x=observation_date, y=UNRATE))
 ```
 
 # Step 1
-
 ## Remove Trend and Seasonality
 ```{r}
+
+#removing trend and seasonality
+unrate_d12 <- diff(unrate, differences = 12)
+plot(unrate_d12)
+
 unrate_d12 <- diff(unrate, differences = 12)
 plot(unrate_d12)
 ```
@@ -40,56 +57,246 @@ pacf(unrate)
 ## Create Linear Models
 ### Linear MA Model
 ```{r}
-MA <- arima(unrate, order = c(0,0,1))
-print(MA)
+MA <- arima(unrate, order = c(0, 0, 1))
+ma_r_squared <- as.numeric(MA[2]$sigma2[1])
+ma_summary <- summary(MA)
+# Calculate the adjusted R-squared value
+ma_adjusted_r_squared <- 1 - (1 - ma_r_squared) * (data_length - 1) / (data_length)
+# Print the adjusted R-squared value
+print(ma_adjusted_r_squared)
+
+# Z Test
+ma_t_stat <- coeftest(MA)
+# Print the t-statistics
+print(ma_t_stat) ### High Z statistics means there is a strong correlation, P value is small so we can reject null hypothesis.
 
 ```
 
-### Linear AR Model
+### Linear AR Models
+#### AR(1)
 ```{r}
-AR <- arima(unrate, order = c(1,0,0))
-print(AR)
+AR1 <- arima(unrate, order = c(1, 0, 0))
+ar1_r_squared <- as.numeric(AR1[2]$sigma2[1])
+ar1_summary <- summary(AR1)
+# Calculate the adjusted R-squared value
+ar1_adjusted_r_squared <- 1 - (1 - ar1_r_squared) * (data_length - 1) / (data_length)
+# Print the adjusted R-squared value
+print(ar1_adjusted_r_squared)
+
+# Z Test
+ar1_t_stat <- coeftest(AR1)
+# Print the t-statistics
+print(ar1_t_stat) ### High Z statistics means there is a strong correlation, P value is small so we can reject null hypothesis.
+
 ```
 
-### Linear ARMA Model
+
+#### AR(2)
 ```{r}
-ARMA <- arima(unrate, order = c(1,0,1))
-print(ARMA)
+AR2 <- arima(unrate, order = c(2, 0, 0))
+ar2_r_squared <- as.numeric(AR2[2]$sigma2[1])
+ar2_summary <- summary(AR2)
+# Calculate the adjusted R-squared value
+ar2_adjusted_r_squared <- 1 - (1 - ar2_r_squared) * (data_length - 1) / (data_length)
+# Print the adjusted R-squared value
+print(ar2_adjusted_r_squared)
+
+# Z Test
+ar2_t_stat <- coeftest(AR2)
+# Print the t-statistics
+print(ar2_t_stat) ### High Z statistics means there is a strong correlation, P value is small so we can reject null hypothesis.
+```
+#### AR(3)
+```{r}
+AR3 <- arima(unrate, order = c(3, 0, 0))
+ar3_r_squared <- as.numeric(AR3[2]$sigma2[1])
+ar3_summary <- summary(AR3)
+# Calculate the adjusted R-squared value
+ar3_adjusted_r_squared <- 1 - (1 - ar3_r_squared) * (data_length - 1) / (data_length)
+# Print the adjusted R-squared value
+print(ar3_adjusted_r_squared)
+
+# Z Test
+ar3_t_stat <- coeftest(AR3)
+# Print the t-statistics
+print(ar3_t_stat) ### High Z statistics means there is a strong correlation, P value is small so we can reject null hypothesis.
 ```
 
-## Verify White Noise Process (Q-Test)
+
+### Linear ARMA Model 1
+```{r}
+ARMA1 <- arima(unrate, order = c(1, 0, 1))
+arma1_r_squared <- as.numeric(ARMA1[2]$sigma2[1])
+arma1_summary <- summary(ARMA1)
+
+# Calculate the adjusted R-squared value
+arma1_adjusted_r_squared <- 1 - (1 - arma_r_squared) * (data_length - 1) / (data_length)
+# Print the adjusted R-squared value
+print(arma1_adjusted_r_squared)
+
+# Z Test
+arma1_t_stat <- coeftest(ARMA1)
+# Print the t-statistics
+print(arma1_t_stat) ### High Z statistics means there is a strong correlation, P value is small so we can reject null hypothesis. In support of AR model. 
+```
+### Linear ARMA Model 2
+```{r}
+ARMA2 <- arima(unrate, order = c(2, 0, 1))
+arma2_r_squared <- as.numeric(ARMA2[2]$sigma2[1])
+arma2_summary <- summary(ARMA2)
+
+# Calculate the adjusted R-squared value
+arma2_adjusted_r_squared <- 1 - (1 - arma2_r_squared) * (data_length - 1) / (data_length)
+# Print the adjusted R-squared value
+print(arma2_adjusted_r_squared)
+
+# Z Test
+arma2_t_stat <- coeftest(ARMA2)
+# Print the t-statistics
+print(arma2_t_stat) ### High Z statistics means there is a strong correlation, P value is small so we can reject null hypothesis. In support of AR model. 
+```
+
+### Linear ARMA Model 3
+```{r}
+ARMA3 <- arima(unrate, order = c(1, 0, 4))
+arma3_r_squared <- as.numeric(ARMA3[2]$sigma2[1])
+arma3_summary <- summary(ARMA3)
+
+# Calculate the adjusted R-squared value
+arma3_adjusted_r_squared <- 1 - (1 - arma3_r_squared) * (data_length - 1) / (data_length)
+# Print the adjusted R-squared value
+print(arma3_adjusted_r_squared)
+
+# Z Test
+arma3_t_stat <- coeftest(ARMA3)
+# Print the t-statistics
+print(arma3_t_stat) ### High Z statistics means there is a strong correlation, P value is small so we can reject null hypothesis. In support of AR model. 
+```
+
+## Check for stationary 
+Test statistic: The Dickey-Fuller test produces a test statistic that measures the strength of evidence against the null hypothesis of non-stationarity. It is denoted as "t-value" or "adf" in the test results. The more negative (or less positive) the test statistic, the stronger the evidence for rejecting the null hypothesis.
+```{r}
+# Linear MA Model
+adf_MA <- ur.df(MA$residuals)
+print(adf_MA)
+# Linear AR Model
+adf_AR <- ur.df(AR$residuals)
+print(adf_AR)
+# Linear ARMA Model
+adf_ARMA <- ur.df(ARMA$residuals)
+print(adf_ARMA)
+```
+
+##  AIC
+AIC stands for Akaike Information Criterion. It is a measure used in statistics to assess the relative quality of statistical models. The AIC value is calculated based on the likelihood function of the model and the number of parameters estimated in the model.
+
+The AIC provides a balance between model fit and model complexity. It penalizes models that have a large number of parameters, favoring simpler models that explain the data well. The goal is to find a model that minimizes the AIC value.
+
+The AIC value is calculated using the following formula:
+
+AIC = -2 * log-likelihood + 2 * k
+
+where:
+
+log-likelihood is the logarithm of the maximum likelihood estimate of the model.
+k is the number of parameters estimated in the model.
+In general, lower AIC values indicate better-fitting models, as they strike a balance between goodness of fit and model complexity. When comparing multiple models, the model with the lowest AIC value is typically considered the best-fitting model.
+
+It's worth noting that the AIC is a relative measure, meaning that it is useful for comparing different models but does not provide an absolute assessment of model fit or prediction accuracy. Other information criteria, such as the Bayesian Information Criterion (BIC), can also be used for model selection in a similar manner.
+```{r}
+AIC(MA)
+AIC(AR1)
+AIC(AR2)
+AIC(AR3)
+
+
+AIC(ARMA1)
+AIC(ARMA2)
+AIC(ARMA3)
+```
+
+## BIC 
+BIC stands for Bayesian Information Criterion. It is another criterion used for model selection in statistics. Like the AIC (Akaike Information Criterion), the BIC provides a measure of the relative quality of statistical models.
+
+The BIC takes into account both the goodness of fit of the model and the complexity of the model, similar to the AIC. However, the BIC places a higher penalty on model complexity than the AIC. It is derived from a Bayesian perspective, assuming a uniform prior distribution over the model parameters.
+
+The BIC value is calculated using the following formula:
+
+BIC = -2 * log-likelihood + log(n) * k
+
+where:
+
+log-likelihood is the logarithm of the maximum likelihood estimate of the model.
+n is the number of observations in the data.
+k is the number of parameters estimated in the model.
+The BIC penalizes models with more parameters more heavily than the AIC, effectively favoring simpler models. Therefore, the BIC tends to produce a more parsimonious model compared to the AIC.
+
+Similar to the AIC, lower BIC values indicate better-fitting models. When comparing multiple models, the model with the lowest BIC value is typically considered the best-fitting model.
+
+It's important to note that the AIC and BIC are both useful criteria for model selection, and the choice between them depends on the specific context and preferences. In some cases, the AIC may favor more complex models, while the BIC tends to favor simpler models.
+```{r}
+BIC(MA)
+BIC(AR1)
+BIC(AR2)
+BIC(AR3)
+
+BIC(ARMA1)
+BIC(ARMA2)
+BIC(ARMA3)
+```
+
+
+## Ljung Box Test
+The test is based on the Ljung-Box statistic, which measures the overall autocorrelation of the residuals at different lags. The null hypothesis of the test is that there is no autocorrelation in the residuals.
 ```{r}
 Box.test(unrate, type='Ljung-Box')
 ```
 
 
 
-#Step 2
 
-#Import data and declare time series
+
+
+
+
+
+
+
+#Step 2:
+##Import data and declare time series
 Declaration: An Excel file named "ch3_UnemploymentRate.xls" is read using read_excel(). The data is then divided into the first 90% portion (data_first_90pct) and the estimation sample (data_estimation_sample). A time series object unrate_forecast is created based on the "UNRATE" column.
 ```{r}
+# create train data, first 90%
 data_row_ct <- nrow(data)
 data_first_90pct <- data[1:ceiling(0.9*data_row_ct),]
 data_first_90pct_row_ct <- nrow(data_first_90pct)
+# set test data
 data_estimation_sample <- tail(data, data_row_ct-ceiling(0.9*data_row_ct))
 data_estimation_sample_row_ct <- data_row_ct-ceiling(0.9*data_row_ct)
-```
 
+```
 
 ## Model 1: AR(3) (Fixed Scheme): 
 An AR(3) model is fitted to the estimation sample using dynlm(). The model is summarized, and a for loop is used to generate forecasts (fcast1) and forecast errors (ferror1) based on the model coefficients. The mean squared error (MSE) is calculated (MSE1). The model is then tested for forecast optimality using the MPE test and the informational efficiency test.
+
+### 90% Control, 10% Test
 ```{r}
+#fit AR(3)
+ar3_model<-dynlm(unrate_forecast ~ lag(unrate_forecast,-1) + lag(unrate_forecast,-3), start=c(1948,1), end=c(2023,2)) 
+summary(ar3_model)
+
+
 fcast1<-numeric(data_estimation_sample_row_ct) #generate a vector of zeros (length of estimation sample set)
 ferror1<-numeric(data_estimation_sample_row_ct) #generate a vector of zeros (length of estimation sample set)
 loss1<-numeric(data_estimation_sample_row_ct) #generate a vector of zeros (length of estimation sample set)
 
-model<-dynlm(unrate_forecast ~ lag(unrate_forecast,-1) + lag(unrate_forecast,-3), start=c(1948,1), end=c(2023,2)) #fit AR(3)
-summary(model)
-
-for (i in 1:data_estimation_sample_row_ct){ #start a for loop
-  fcast1[i]<-coef(model)[1]+ coef(model)[2]*unrate_forecast[data_first_90pct_row_ct-1+i] + coef(model)[3]*unrate_forecast[data_first_90pct_row_ct-3+i] #fill in forecasted values at the end of each iteration
-  ferror1[i]<-unrate_forecast[data_first_90pct_row_ct+i]- fcast1[i] #fill in forecasted values at the end of each iteration
+for (i in 1:data_estimation_sample_row_ct){ #start a for loop 
+  #fill in forecasted values at the end of each iteration
+  ## Forecast values
+  fcast1[i]<-coef(ar3_model)[1]+ coef(ar3_model)[2]*unrate_forecast[data_first_90pct_row_ct-1+i] + coef(ar3_model)[3]*unrate_forecast[data_first_90pct_row_ct-3+i]
+  ## Error Values
+  ferror1[i]<-unrate_forecast[data_first_90pct_row_ct+i]- fcast1[i]
+  ## Loss Values
   loss1[i] <-ferror1[i]^2
 } #end the loop
 
@@ -99,9 +306,18 @@ MSE1 <- mean(loss1)
 mpetest <- lm(ferror1 ~ 1)
 summary(mpetest)
 
-
 IETest <- lm(ferror1 ~ fcast1)
 summary(IETest)
+
+```
+
+### AR(3) One Step Ahead
+```{r}
+ar3_onestep <- rbind(NA,NA,NA, data.frame(predict(ar3_model, h=1)))
+colnames(ar3_onestep)[1] <- "forecast"
+error_onestep <- test$UNRATE - test$forecast
+loss_onestep <- (test$UNRATE - test$forecast)^2
+fAR3_onestep <- cbind(data, ar3_onestep$forecast, error_onestep, loss_onestep)
 ```
 
 
@@ -156,8 +372,6 @@ IETest <- lm(ferror3 ~ fcast3)
 summary(IETest)
 
 ```
-
-
 
 ## Optimal Linear Combinations: 
 An optimal linear combination of the three forecasts is created using the lm() function (comb). The fitted values of the combination model are used as the forecast values (fcast4). Forecast errors and MSE are calculated for this combined forecast (ferror4, loss4, and MSE4).
@@ -372,9 +586,10 @@ legend("topleft", legend=c("Actual", "Fit", "Res"), lty=c(2,2,1), col=c("black",
 
 
 ## Part 3 Dickey-Fuller Test   ###
-#P283
-#install.packages("urca") #Unit Root and Cointegration Tests for Time Series Data
-library(urca) #use urca package, allows choosing drift and/or trend for ADF test
+#P286
+dickey_fuller_test <- ur.df(unrate,type="drift",lags=1) 
+summary(dickey_fuller_test)
+
 
 ur.df(unrate,type="drift",lags=0) 
 ur.df(diff(unrate),type="drift",lags=0) 
@@ -391,9 +606,6 @@ res_dickey_fuller<-  residuals(model_dickey_fuller) #generate residuals
 acf(res_dickey_fuller)
 pacf(res_dickey_fuller)
 
-#P286
-
-ur.df(unrate,type="drift",lags=1) 
 
 model_lag1 <-dynlm(dunrate ~ lag(unrate,-1)+lag(dunrate,-1)) #regression corresponding to the above ADF test
 summary(model_lag1)
